gitops/manifests/attic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: attic
  namespace: attic
spec:
  selector:
    app: attic
  ports:
    - port: 8080
      targetPort: 8080
